src/test/ui/consts/min_const_fn/cmp_fn_pointers.rs
const fn cmp(x: fn(), y: fn()) -> bool {
    unsafe { x == y }
    //~^ ERROR can't compare
}

fn main() {}
